# p0-mail

./: .env.example  .gitignore  Email_AI_Client_PRD.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: RELEASE.md  ROADMAP.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_offline_fts.sql  003_thread_id_nullable.sql  004_labels.sql  005_sync_enabled.sql  006_fts_body_index.sql  007_attachments_data.sql  008_folders.sql  009_drafts.sql  010_sync_health.sql  011_fts_conditional_triggers.sql  012_fts_html_stripped.sql  013_undo_send.sql
src-tauri/src/: email_parse.rs  imap_session.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: models.rs
src-tauri/src/compose/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/imap_client/: mod.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/oauth/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/secure/: mod.rs
src-tauri/src/smtp_client/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/threading/: mod.rs
src/components/ai/: AiActionButtons.tsx  AiInlineToolbar.tsx  AiSummaryPanel.tsx  AiThinkingStrip.tsx  EmailChatPanel.tsx
src/components/email/: ComposeEditor.tsx  EmailViewer.tsx  ThreadViewer.tsx  VirtualizedThreadList.tsx
src/components/onboarding/: OnboardingFlow.tsx
src/lib/: aiUi.ts  api.ts  fuzzy.ts  openExternal.ts  plainTextToHtml.ts  quote.ts
src/pages/: InboxPage.tsx  SettingsPage.tsx
src/types/: index.ts
(+5 files in other folders)
