[package]
name = "p0mail"
version = "0.1.0"
description = "AI-Native Desktop Email Client"
authors = ["p0mail"]
edition = "2021"

[lib]
name = "p0mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher", "bundled-full"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
imap-proto = "0.16"
tokio-native-tls = "0.3"
native-tls = "0.2"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
ammonia = "4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
dirs = "5"
urlencoding = "2"
base64 = "0.22"
mailparse = "0.16"
dotenvy = "0.15"

